# desloppify

./: LICENSE  pyproject.toml
desloppify/app/cli_support/: parser_groups.py
desloppify/app/commands/: suppress.py
desloppify/app/commands/move/: apply.py
desloppify/app/commands/resolve/: living_plan.py
desloppify/app/commands/review/: prompt_sections.py
desloppify/app/commands/review/batch/: prompt_template.py
desloppify/app/commands/review/packet/: build.py
desloppify/app/commands/review/runner_process_impl/: attempts.py
desloppify/app/commands/runner/: codex_batch.py
desloppify/base/config/: __init__.py
desloppify/engine/_state/: filtering.py  merge.py  merge_issues.py
desloppify/engine/_work_queue/: selection.py  snapshot.py
desloppify/intelligence/review/: __init__.py  personas.py  prepare_batches_builders.py
desloppify/languages/_framework/treesitter/: __init__.py
desloppify/languages/_framework/treesitter/analysis/: extractors.py
desloppify/languages/_framework/treesitter/specs/: scripting.py
desloppify/languages/python/: phases.py
desloppify/languages/python/detectors/: bandit_adapter.py  deps_resolution.py
desloppify/languages/python/tests/: test_bandit_adapter.py  test_py_deps.py
desloppify/languages/r/: test_coverage.py
desloppify/languages/rust/: commands.py  phases.py
desloppify/languages/rust/detectors/: safety.py
desloppify/languages/rust/tests/: test_commands.py  test_custom.py  test_phases.py
desloppify/tests/commands/: test_helpers.py  test_runner_modules_direct.py  test_transitive_engine.py
desloppify/tests/commands/plan/: test_triage_stage_prompts_flow_direct.py
desloppify/tests/commands/resolve/: test_living_plan_direct.py
desloppify/tests/commands/review/: test_review_packet_build_direct.py  test_review_runner_helpers_direct.py
desloppify/tests/core/: test_pyproject_optional_dependencies.py
desloppify/tests/detectors/: test_orphaned.py
desloppify/tests/lang/common/: test_bash_unused_imports.py  test_treesitter_analysis_direct.py  test_treesitter_availability.py
desloppify/tests/review/: review_submodules_cases.py
desloppify/tests/review/import_scoring/: test_review_external.py
desloppify/tests/state/: test_suppression_scoring.py
dev/release-notes-drafts/: v1.0.md
dev/review/results/: issue-140.json  issue-447.json  issue-469.json  issue-528.json  issue-541.json  issue-559.json  issue-562.json  issue-564.json  issue-601.json  pr-529.json  pr-584.json  pr-585.json
docs/: scoring.md
